--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -2,12 +2,13 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.1.1">
-    <title>Corbin Ashby</title>
+    <title>Corbin's Blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
@@ -47,15 +48,15 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Corbin Ashby</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Corbin Ashby</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="#">Twitter</a>
-            <a class="nav-link" href="#">Resume</a>
-            <a class="nav-link active" href="#">Blog</a>
+            <a class="nav-link" href="https://twitter.com/corbs_nz">Twitter</a>
+            <a class="nav-link" href="{% static 'corbin_ashby_randomcv.docx' %}">Resume</a>
+            <a class="nav-link active" href="{% url 'bloghome' %}">Blog</a>
           </div>
         </div>
       </nav>
@@ -70,7 +71,7 @@
     <h2 class="pb-2">Latest Posts</h2>
     <hr>
     {% for blog in blogs.all %}
-    <a href=""><h3>{{ blog.title }}</h3></a>
+    <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
     {{ blog.pub_date_pretty }}
     <br>
     <img class="img-fluid" src="{{ blog.image.url }}" height="200" width="200">
