--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -47,15 +48,15 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Corbin Ashby</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Corbin Ashby</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="#">Twitter</a>
-            <a class="nav-link" href="#">Resume</a>
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="https://twitter.com/corbs_nz">Twitter</a>
+            <a class="nav-link" href="{% static 'corbin_ashby_randomcv.docx' %}">Resume</a>
+            <a class="nav-link" href="{% url 'bloghome' %}">Blog</a>
           </div>
         </div>
       </nav>
@@ -65,11 +66,12 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1>Hi, I'm Corbin</h1>
-      <p class="lead text-muted">Hey, my name is Corbin and I enjoy making Django websites</p>
+      <h1>Welcome</h1>
+      <p class="lead text-muted">Hey, my name is Corbin and welcome to my homepage.</p>
       <p>
         <a href="mailto:corbin.ashby94@gmail.com" class="btn btn-primary my-2">Email Me</a>
       </p>
+      <img src="{% static 'IMG_0784.jpg' %}" height="300" >
     </div>
   </section>
 
